featï:add SingletonFactory